fixed the news search bar and aligned it with styles

--- a/style.css
+++ b/style.css
@@ -84,6 +84,11 @@ body{
   padding: 10px 30px;
 }
 
+.news-card img{
+  width: 300px;
+  height: 200px;
+  border-radius: 12px;
+}
 .news-card a{
   text-decoration: none;
   color: black;
@@ -93,4 +98,7 @@ body{
   display: flex;
   flex-direction: column;
   row-gap: 20px;
+  align-items: center;
+  justify-content: center;
+  max-width: 60%;
 }
